--- a/Models/FlowMatching/2025.08.08_MeanAudio.md
+++ b/Models/FlowMatching/2025.08.08_MeanAudio.md
@@ -177,3 +177,181 @@ $
 x_0 = x_1 - f_\theta(x_1, 0, 1)
 $
 where $x_1 = \epsilon \sim p_\text{prior}(\epsilon)$. 
+
+## 4·MeanAudio
+
+> <a id="fig:mean_audio">![](figs/MeanAudio.pdf)</a>
+
+> Model architecture overview: MeanAudio combines $N_1$ multi-modal (MMDiT) blocks and $N_2$ single-modal (DiT) blocks to construct the flow transformer. 
+>     It leverages the joint attention in multi-modal blocks to integrate FLAN-T5’s fine-grained text embeddings, and employs AdaLN to inject CLAP’s global conditioning. 
+>     \vspace{-0.3cm}
+>     % MeanAudio regresses the average velocity field in the latent space during training, enabling fast and faithful audio generation during inference. 
+>     % Conditioned on the textual prompt and timestep embeddings, MeanAudio regresses the average velocity field in the latent space for fast and faithful audio generation. 
+>     % Based on a Flux-style latent flow transformer, MeanAudio regress the average velocity field during training, enabling fast and faithful audio generation during inference.
+
+As illustrated in Figure [fig:mean_audio](#fig:mean_audio), MeanAudio employs a Flux-Style flow transformer to learn mean velocity in the latent space conditioned on the textual prompt and timestep embeddings.
+
+To stabilize training, we introduce an instantaneous-to-mean learning curriculum with flow field mix-up, guiding the model to learn both short and long displacements along the trajectory. 
+In this section, we first detail the architectural design of MeanAudio, then present methods to accelerate its inference speed. 
+
+### Audio Encoding
+
+Following prior works [^Liu2023AudioLDM], [^Ghosal2023Text-to-Audio], we model the generative process in the latent space to improve computational efficiency.
+
+Specifically, we apply the short-time Fourier transform (STFT) to audio waveforms and extract the magnitude component as mel spectrograms [^Stevens1937Scale].
+
+These spectrograms are then encoded into latent representations $x$ using a pretrained variational autoencoder (VAE) [^Kingma2013Auto-Encoding].
+
+During inference, the generated latents are decoded back into spectrograms via the VAE and subsequently converted to audio waveforms using a pretrained vocoder [^Lee2023BigVGAN].
+
+We employ a 1D convolution-based VAE for its superior capacity to model frequency- and length-variable representations.
+
+For a 10-second audio input, the autoencoder produces a latent sequence of 312 tokens, each with a hidden dimension of 20.
+
+\begin{algorithm}
+\caption{**MeanAudio Training**}
+\label{alg:meanaudio_training}
+
+\begin{algorithmic}[1]
+\State **Input:**
+
+Encoded audio latent: $x$, textual conditions $**C**$, flow transformer $f_\theta$. 
+\State Sample $t, r \sim \text{lognorm}(\mu, \sigma)$, $\epsilon \sim \mathcal{N}(0, I)$
+
+\State $x_t \gets (1 - t) \cdot x + t \cdot \epsilon$
+\State $v_t \gets \epsilon - x$
+\State Compute model output $f_\theta(x_t, r, t)$ and its derivative $\frac{df_\theta}{dt}$ via JVP: \\
+\hskip1em $f_\theta(x_t, r, t), \frac{df_\theta (x_t, r, t)}{dt}\gets \text{JVP}(f_\theta, (x_t, r, t), (v, 0, 1))$
+
+\State Compute the guided instantaneous velocity estimate:
+\State \hskip1em $v_t^\text{cfg} \gets \omega \cdot v_t + \kappa \cdot f_\theta(x_t, t, t, \varnothing) + (1 - w - \kappa) \cdot f_\theta(x_t, t, t, **C**)$
+\State Compute the guided average velocity estimate:
+\State \hskip1em $u_{\text{tgt}}^\text{cfg} \gets  v_t^\text{cfg} - (t - r) \cdot \frac{d}{dt}f_\theta (x_t, r, t)$
+\State $\text{loss} \gets \|f_\theta(x_t, r, t) - \text{sg}(u_{\text{tgt}})\| ^2$
+\State **Output:** loss
+\end{algorithmic}
+
+\end{algorithm}
+
+\begin{algorithm}
+\caption{**MeanAudio Inference**}
+\label{alg:meanaudio_inference}
+
+\begin{algorithmic}[1]
+\State **Input:**
+
+Trained network $f_\theta$, textual conditions $**C**$
+\State Sample noise: $\epsilon \sim \mathcal{N}(0, I)$
+\State $x \gets \epsilon$
+
+\For{$i = 0$ to $N-1$}
+\State $x = x - (t_{i+1} - t_{i}) \cdot f_\theta(x, t_i, t_{i+1}, **C**)$
+\EndFor
+
+\State **Output:** $x$
+\end{algorithmic}
+
+\end{algorithm}
+
+### Flow Transformer
+
+Inspired by Flux [^BlackForestLabs2024Flux], we adopt the MMDiT [^Esser2024Scaling] and DiT [^Peebles2023Scalable] blocks to build MeanAudio. 
+Specifically, we combine $N_1$ multi-modal transformer blocks with audio/text branches and $N_2$ audio-only DiT blocks to construct our flow transformer.
+
+To further improve the training stability and generation quality, we employ several changes: Firstly, we use ConvMLP rather than vanilla MLPs in the audio stream of MeanAudio.
+
+ConvMLP uses 1D convolutions (kernel size = 3 and padding = 1) rather than linear layers, demonstrating stronger performance in capturing local temporal structure [^Cheng2024Taming].
+
+Secondly, we apply rotary positional embedding (RoPE) [^Su2024Roformer] on the queries and keys in both the audio and text branches. 
+Unlike absolute position embeddings, RoPE models the relative distances and is beneficial for variable-length audio generation
+Thirdly, we use RMSNorm 
+
+with learnable scales in attention calculation to enable stable and efficient training. 
+
+### Model Conditioning
+
+MeanAudio is conditioned on textual prompt and time steps to render faithful audio signals. 
+For text conditioning, we use FLAN-T5 [^Chung2024Scaling] and CLAP [^Wu2023Large-Scale] to extract caption embeddings. 
+
+FLAN-T5 is an instruction-tuned large-language model (LLM) capable of producing fine-grained token embeddings. 
+Meanwhile, CLAP is pre-trained on large-scale audio-text dataset and can offer global acoustic-aligned text embeddings. 
+Denote $y_\text{T5} \in \mathbb{R}^{N\times d_\text{T5}}$ as the embedding extracted by FLAN-T5, where $N$ and $d_\text{T5}$ represent the number of tokens and model's output dimension.
+
+We feed $y_\text{T5}$ to the text branch of the MMDiT to fuse the detailed textual information into audio branch via multi-modal joint attention.
+
+Furthermore, let $c_\text{CLAP} \in \mathbb{R}^{1\times d_\text{CLAP}}$ represent the global text embedding obtained from the CLAP text encoder (CLAP$_\text{T}$).
+
+We project this embedding through an MLP and combine it with the extracted timestep features to form the global condition $c = t_\text{emb} + r_\text{emb} + c'_\text{CLAP}$. 
+This global information is then injected into the model via the scales and biases of adaptive layer normalization (AdaLN) layers.
+
+While FLAN-T5 can capture fine-grained textual details at the token level, CLAP contributes holistic, audio-grounded semantic information.
+
+Together, they provide rich and balanced conditions that improve both the fidelity and semantic alignment of the generated audio. 
+
+### Integrated Classifier-Free Guidance
+
+Classifier-free guidance (CFG) [^Ho2022Classifier-Free] is the widely adopted technique for guiding generative models.
+
+However, using CFG during sampling doubles the number of function evaluations (NFE), as both class-conditional and unconditional model outputs should be computed.
+
+To eliminate the additional cost associated with guided sampling, MeanAudio integrates CFG into the training target, following [^Geng2025Mean]. 
+Specifically, define $v_t^\text{cfg}$ as the estimated instantaneous velocity field with guidance, which can be expressed as follows: 
+$$
+v_t^\text{cfg} = \omega v_t + \underbrace{\kappa f_\theta(x_t, t, t | **C**)}_{\text{cls. conditional}} + \underbrace{(1-\omega-\kappa)f_\theta(x_t, t, t|\varnothing)}_{\text{cls. unconditional}}
+$$
+Here, $\kappa$ is a mixing factor which combines both class-conditional and unconditional predictions into the guided field, resulting in an effective guidance scale of $\omega' = \frac{\omega}{1-\kappa}$. 
+Similarly, we also expose the trainable network $f_\theta$ with class-unconditional inputs, where we randomly drop $**C**$ with 10\% probability, following [^Ho2022Classifier-Free]. 
+By replacing $v_t$ with $v_t^\text{cfg}$ in $u_\text{tgt}$, we obtain the average velocity target with guidance, which can be formulated as: 
+$$
+u_\text{tgt}^\text{cfg} = v^\text{cfg}_t -  (t-r)\frac{d}{dt}f_\theta(x_t, r, t)
+$$
+By regressing $u_\text{tgt}^{\text{cfg}}$, MeanAudio directly learns the guidance during training, thus avoiding the need for an additional forward pass during generation.
+
+The training and inference procedure of MeanAudio are illustrated in Algorithm [alg:meanaudio_training](#alg:meanaudio_training) and [alg:meanaudio_inference](#alg:meanaudio_inference). 
+
+> <a id="tab:main_results"></a>
+> Main results on AudioCaps test set.
+
+The single-step generation results are in *italic*.
+
+The best mulit-step and single-step generation results are **bolded**, the second-best results are \underline{underlined}. 
+$\ast$: The parameter count refers to the diffusion backbone, excluding the text encoders, VAE, and vocoders.
+$\dag$: The real-time factor (RTF) is evaluated over 100 generations samples on an NVIDIA RTX 3090 GPU.
+$\ddag$: For open-source models, we evaluated the performance using official code and checkpoint. 
+$\diamondsuit$: These models integrated CFG into training, resulting in *True*
+
+NFEs, for other models, NFE should actually be doubled. 
+\vspace{-0.3cm}
+
+> <a id="fig:flow_trajctory">![](figs/Flow_trajactory.pdf)</a>
+
+> % Illustration of our training curriculum, which encourages the model to first learn the foundational instantaneous velocity $v_t$, and then gradually adapt to mean flows $u(x_t, r, t)$ along the trajectory. 
+>     Illustration of the underlying instantaneous field $v_t$, which models tangents of the flow trajectory, and the average velocity field $u(x_t, r, t)$, which captures long displacements. 
+>     Our training curriculum encourages the model to first learn the foundational instantaneous dynamics, then gradually adapt to mean flows for fast and faithful generation.
+
+### Stabilizing Flow Fields
+
+Although the *Mean Flow Identity* provides an effective training target for learning fast single-step generation, we found that directly modeling audio latent with Eq. [eq:mf_loss](#eq:mf_loss) results in unstable training, slow convergence and poor multi-step generation.
+
+This may be due to several factors:
+Firstly, the MF objective defined in Eq.~[eq:mf_loss](#eq:mf_loss) focuses solely on learning the average velocity, which may cause the model to neglect the underlying instantaneous field that serves as the foundation for mean flow [^Peng2025Flow-Anchored].
+
+Secondly, the training target $u^\text{cfg}_\text{tgt}$ is defined by the model’s own derivative.
+
+However, a randomly initialized model may fail to provide effective guidance at the beginning, resulting in slow convergence. 
+
+To address this issue, we propose an instantaneous-to-mean curriculum with flow field mixup to improve training stability and efficiency. 
+As illustrated in Figure [fig:flow_trajctory](#fig:flow_trajctory), our curriculum comprises two stages: In the first stage, the model is trained on large-scale, weakly-labeled audio-text datasets to learn the instantaneous velocity field, whose loss is defined in Eq. [eq:fm_loss](#eq:fm_loss).
+
+This stage establishes a strong initialization, allowing the model to first capture the underlying foundational dynamics. 
+In the second stage, the model is fine-tuned on a smaller, high-quality dataset to learn the mean velocity. 
+
+In this stage, we adopt the strategy from [^Geng2025Mean], where we blend the instantaneous and average fields by randomly setting $r = t$.
+
+As illustrated in Eq.~[eq:mf_loss](#eq:mf_loss), this operation degenerates the MF objective into standard flow matching.
+
+As such, the network can provide an effective derivative approximation during fine-tuning by leveraging the knowledge acquired in pre-training.
+
+Furthermore, by combining two flows, the model can stably adapt to average field for fast few-step generation, while preserving the multi-step synthesis performance through adherence to instantaneous velocity.
+
+We demonstrate the effectiveness of our training curriculum in the experimental section. 
