--- a/Models/FlowMatching/2025.08.08_MeanAudio.md
+++ b/Models/FlowMatching/2025.08.08_MeanAudio.md
@@ -530,3 +530,59 @@ Our ablation studies further validate the importance of the proposed training cu
 \bibliography{aaai2026}
 
 \end{document}
+
+## References
+
+[^Liu2023AudioLDM]: {AudioLDM}: Text-to-Audio Generation With Latent Diffusion Models. Proc. ICML 2023.
+[^Ghosal2023Text-to-Audio]: Text-to-Audio Generation Using Instruction Guided Latent Diffusion Model. Proc. ACM MM 2023.
+[^Huang2023Make-an-Audio]: Make-an-Audio: Text-to-Audio Generation With Prompt-Enhanced Diffusion Models. Proc. ICML 2023.
+[^Huang2023Make-an-Audio]: Make-an-Audio 2: Temporal-Enhanced Text-to-Audio Generation. arXiv:2305.18474.
+[^Hai2025EzAudio]: {EzAudio}: Enhancing Text-to-Audio Generation With Efficient Diffusion Transformer. Proc. Interspeech 2025.
+[^Hung2024TangoFlux]: {TangoFlux}: Super Fast and Faithful Text to Audio Generation With Flow Matching and Clap-Ranked Preference Optimization. arXiv:2412.21037.
+[^Haji-Ali2024Taming]: Taming Data and Transformers for Audio Generation. arXiv:2406.19388.
+[^Evans2025Stable]: Stable Audio Open. Proc. ICASSP 2025.
+[^Lee2024Etta]: {ETTA}: Elucidating the Design Space of Text-to-Audio Models. Proc. ICML 2024.
+[^Valle2025Fugatto]: Fugatto 1: Foundational Generative Audio Transformer Opus 1. Proc. ICLR 2025.
+[^Kong2024Improving]: Improving Text-to-Audio Models With Synthetic Captions. Proc. Interspeech 2024.
+[^Yuan2025Sound-VECaps]: {Sound-VECaps}: Improving Audio Generation With Visual Enhanced Captions. Proc. ICASSP 2025.
+[^Liu2024AudioLDM]: {AudioLDM} 2: Learning Holistic Audio Generation With Self-Supervised Pretraining. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2024.
+[^Majumder2024Tango]: Tango 2: Aligning Diffusion-Based Text-to-Audio Generations Through Direct Preference Optimization. Proc. ACM MM 2024.
+[^Liao2024Baton]: {BATON}: Aligning Text-to-Audio Model With Human Preference Feedback. Proc. IJCAI 2024.
+[^Liu2024AudioLCM]: {AudioLCM}: Text-to-Audio Generation With Latent Consistency Models. Proc. ACM MM 2024.
+[^Liu2025FlashAudio]: {FlashAudio}: Rectified Flows for Fast and High-Fidelity {Text-to-Audio Generation}. Proc. ACL 2025.
+[^Saito2025SoundCTM]: {SoundCTM}: Unifying Score-Based and Consistency Models for Full-Band Text-to-Sound Generation. Proc. ICLR 2025.
+[^Bai2023ConsistencyTTA]: {ConsistencyTTA}: Accelerating Diffusion-Based Text-to-Audio Generation With Consistency Distillation. Proc. Interspeech 2023.
+[^Song2023Consistency]: {Consistency Models}. Proc. ICML 2023.
+[^Geng2025Mean]: Mean Flows for One-Step Generative Modeling. arXiv:2505.13447.
+[^BlackForestLabs2024Flux]: Flux. 
+[^Ho2022Classifier-Free]: Classifier-Free Diffusion Guidance. arXiv:2207.12598.
+[^Rombach2022High-Resolution]: High-Resolution Image Synthesis With Latent Diffusion Models. Proc. CVPR 2022.
+[^Wu2023Large-Scale]: Large-Scale Contrastive Language-Audio Pretraining With Feature Fusion and Keyword-to-Caption Augmentation. Proc. ICASSP 2023.
+[^Chung2024Scaling]: Scaling Instruction-Finetuned Language Models. Journal of Machine Learning Research 2024.
+[^Peebles2023Scalable]: Scalable Diffusion Models With Transformers. Proc. ICCV 2023.
+[^Guan2024Lafma]: {{LAFMA}}: A Latent Flow Matching Model for Text-to-Audio Generation. Proc. Interspeech 2024.
+[^Liu2023Flow]: Flow Straight and Fast: Learning to Generate and Transfer Data With Rectified Flow. Proc. ICLR 2023.
+[^Wang2025T2a-Feedback]: T2a-Feedback: Improving Basic Capabilities of Text-to-Audio Generation via Fine-Grained AI Feedback. Proc. ACL 2025.
+[^Yuan2024Retrieval-Augmented]: Retrieval-Augmented Text-to-Audio Generation. Proc. ICASSP 2024.
+[^Yang2024Audiobox]: Audiobox Tta-Rag: Improving Zero-Shot and Few-Shot Text-to-Audio With Retrieval-Augmented Generation. Proc. Interspeech 2024.
+[^Novack2025Presto!]: Presto! Distilling Steps and Layers for Accelerating Music Generation. Proc. ICLR 2025.
+[^Zhao2025AudioTurbo]: {AudioTurbo}: Fast Text-to-Audio Generation With Rectified Diffusion. Proc. Interspeech 2025.
+[^Wang2024Rectified]: Rectified Diffusion: Straightness Is Not Your Need in Rectified Flow. Proc. ICLR 2024.
+[^Novack2025Fast]: Fast Text-to-Audio Generation With Adversarial Post-Training. arXiv:2505.08175.
+[^Lipman2023Flow]: Flow Matching for Generative Modeling. Proc. ICLR 2023.
+[^Albergo2023Building]: Building Normalizing Flows With Stochastic Interpolants. Proc. ICLR 2023.
+[^Stevens1937Scale]: A Scale for the Measurement of the Psychological Magnitude Pitch. The Journal of the Acoustical Society of America 1937.
+[^Kingma2013Auto-Encoding]: Auto-Encoding Variational Bayes. Proc. ICLR 2013.
+[^Lee2023BigVGAN]: {BigVGAN}: A Universal Neural Vocoder With Large-Scale Training. Proc. ICLR 2023.
+[^Esser2024Scaling]: Scaling Rectified Flow Transformers for High-Resolution Image Synthesis. Proc. ICML 2024.
+[^Cheng2024Taming]: Taming Multimodal Joint Training for High-Quality Video-to-Audio Synthesis. Proc. CVPR 2024.
+[^Su2024Roformer]: Roformer: Enhanced Transformer With Rotary Position Embedding. Neurocomputing 2024.
+[^Peng2025Flow-Anchored]: Flow-Anchored Consistency Models. arXiv:2507.03738.
+[^Kim2019Audiocaps]: Audiocaps: Generating Captions for Audios in the Wild. Proc. NAACL 2019.
+[^Drossos2020Clotho]: Clotho: An Audio Captioning Dataset. Proc. ICASSP 2020.
+[^Mei2024WavCaps]: {WavCaps}: A Chatgpt-Assisted Weakly-Labelled Audio Captioning Dataset for Audio-Language Multimodal Research. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2024.
+[^Gemmeke2017Audio]: {Audio Set}: An Ontology and Human-Labeled Dataset for Audio Events. Proc. ICASSP 2017.
+[^Hershey2021Benefit]: The Benefit of Temporally-Strong Labels in Audio Event Classification. Proc. ICASSP 2021.
+[^Schulman2022Introducing]: Introducing {ChatGPT}. OpenAI Blog 2022.
+[^Kong2020Panns]: Panns: Large-Scale Pretrained Audio Neural Networks for Audio Pattern Recognition. IEEE/ACM Transactions on Audio, Speech, and Language Processing 2020.
+[^Hershey2017CNN]: CNN Architectures for Large-Scale Audio Classification. Proc. ICASSP 2017.
