--- a/Models/FlowMatching/2025.05.19_OZSpeech.md
+++ b/Models/FlowMatching/2025.05.19_OZSpeech.md
@@ -119,3 +119,212 @@ A significant breakthrough in this area, inspired by the success of LLMs in natu
 VALL-E represents speech as discrete codec codes using an off-the-shelf neural codec and redefines TTS as a conditional codec language modeling task.
 
 This approach has sparked further research and development in the field [^Kharitonov2023Speak,], [^Zhang2023Speak], [^Chen2024Vall-E], [^Han2024Vall-E], [^Du2024Cosyvoice].
+
+## 3·Method
+
+> <a id="fig:overall-architecture">![](figs/overall-2.pdf)</a>
+
+> Overview of OZSpeech: (a) The overall architecture: The text prompt is converted to phonemes and then into prior codes via the Prior Codes Generator.
+> 
+> Simultaneously, the audio prompt is encoded into codes using the FACodec Encoder.
+> 
+> These codes are concatenated along the sequence dimension and fed into the OT-CFM Vector Field Estimator, which generates codes preserving the text content and acoustic attributes.
+> 
+> Finally, the FACodec Decoder converts them into output speech. (b) The Prior Codes Generator $f_\psi(\cdot)$ produces sequences of phoneme-aligned codes. 
+>     (c) The Vector Field Estimator refines these codes with the prosody and acoustic details from the acoustic prompt.
+> 
+> Before being fed through $v_\theta(\cdot, \cdot)$, six sequences of codes are first enhanced via Quantizer Embedding, which serves as an identifier for each sequence within the hidden space.
+> 
+> These embeddings are then folded along the hidden dimension and processed by the network to estimate the velocity of the prior codes. 
+>     % The input sequence is subsequently enriched with Position Embedding and Time Embedding before being processed by the network to estimate the velocity of the prior codes.
+
+### Problem Statement
+
+\label{sec:problem-statement}
+
+In this paper, we consider the problem of generating speech from given text and acoustic prompt such that conditions for the outputs are met. 
+Viewing the synthesized speech as a data distribution, denoted as $\text{x}_1 \sim p_1(x)$, previous methods often construct the output data distribution from a noise distribution $\text{x}_0 \sim p_0(x)$. 
+However, we propose constructing the output data distribution from a feasible intermediate state candidate $\text{x}_{\text{pr}} \sim p_{\text{prior}}(x)$ instead of $\text{x}_0$, thereby disregarding preceding states and reducing the number of sampling steps. 
+To achieve this, we undertake the following steps:
+
+\begin{compactitem}
+
+-  **Prior Code Generation:**
+
+We design an effective method for generating prior codes to produce $**x**_{\text{pr}}$ (see Section [sec:prior-codes-gen](#sec:prior-codes-gen)).
+
+-  **Vector Field Estimation:**
+
+We develop a vector field estimator to approximate $v_{\theta}$ , facilitating the transition from $\text{x}_{\text{pr}}$ to $\text{x}_{1}$ (see Section [sec:osfm](#sec:osfm)).
+
+-  **Waveform Decomposition via FACodec:**
+
+We employ FACodec [^Ju2024N}atural{S}peech], a neural codec disentangler framework, to decompose the waveform into distinct components, including speaker identity and sequences of codes encoding prosody, content, and acoustic 
+details.
+
+This decomposition enables precise control over the aspects of speech to be preserved or modified.
+\end{compactitem}
+
+### Prior Codes Generation Modeling
+
+\label{sec:prior-codes-gen}
+
+Our key contribution to prior code generation is that the process follows a hierarchical structure: each code sequence generation depends on the preceding code sequences, while the condition for the first code sequence is initialized based on phoneme embeddings.
+
+To achieve this, we implement a cascaded neural network where specific decoder layers generate the respective code sequences in the hierarchy (shown in Fig.~[fig:overall-architecture](#fig:overall-architecture)b).
+
+Formally, the Prior Codes Generator $\mathbf{f}_{\psi}(\cdot)$ is modeled as:
+
+$$
+\label{eq:pcg}
+p(\mathbf{q}_{1:6} \mid \mathbf{p}; \psi) = p(\mathbf{q}_{1} \mid \mathbf{p}; f_{\psi}^1) \prod_{j=2}^{6} p(\mathbf{q}_{j} \mid \mathbf{q}_{j-1}; f_{\psi}^j),
+$$
+
+where \(\mathbf{q}_j\) is the \(j\)-th code sequence from the Feed-Forward Transformer (FFT) decoder layer \(f_{\psi}^j\) and \(\mathbf{p}\) represents phoneme embeddings as the initial condition. 
+The Prior Loss \(\mathcal{L}_{\text{prior}}\) minimizes the negative logarithm of the joint probability in Eq.~ \eqref{eq:pcg}, ensuring content code sequences are learned effectively by conditioning on phonemes, while the others, including prosody and acoustic details, converge towards the mean representations.
+
+The Prior Codes Generator produces semantically meaningful codes, reducing the distance between \(\mathbf{x}_{\text{pr}}\) and \(\mathbf{x}_1\), allowing the Vector Field Estimator \(\mathbf{v}_{\theta}(\cdot, \cdot)\) to approximate vectors from a mean distribution rather than generating them from pure noise.
+
+To align the input phonemes with their corresponding output code sequences, we employ a neural network functioning as a Duration Predictor, as introduced in [^Ren2019FastSpeech]. 
+Briefly, the Duration Predictor estimates the duration (i.e., the number of acoustic tokens) for each input phoneme. 
+The phoneme embeddings are duplicated accordingly before being passed through the decoder of the Prior Codes Generator.
+
+We define the loss function used to train the Duration Predictor as $\mathcal{L}_{dur}$, which aims to minimize the mean squared error between the predicted and ground truth durations on a logarithmic scale.
+
+### One-Step Optimal Transport Flow Matching for Zero-Shot TTS
+
+\label{sec:osfm}
+
+**One-Step Optimal Transport Flow Matching Formulation**.
+
+We rectify the OT-CFM paradigm, simultaneously introduced by [^Lipman2023Flow] and [^Liu2023Flow] and first adapted to text generation by [^Hu2024Flow].
+
+Our approach involves constructing a vector field that regresses the velocity of non-Gaussian distribution and data distribution pairs, where the initial distribution closely approximates the target distribution.
+
+To this end, we reformulate the original flow matching loss equation (details provided in [appendix:fm](#appendix:fm)) to explicitly account for the discrepancies between the non-Gaussian initial distribution and the target distribution.
+
+Let $\mathbf{x}_t$ denote a linear probability path, starting from a purely noisy initial point $\mathbf{x}_0 \sim \mathcal{N}(0, I)$ and progressing towards a data point $\mathbf{x}_1 \sim \mathcal{D}$.
+
+It is defined as $\mathbf{x}_t = t\mathbf{x}_1 + (1-t)\mathbf{x}_0$,
+
+where $t \sim \mathcal{U}(0, 1)$ denotes the interpolation parameter. 
+Based on this, the initial point $\mathbf{x}_0$ can be derived as $\mathbf{x}_0 = \frac{t\mathbf{x}_1 - \mathbf{x}_t}{1 - t}$. 
+Thus, the OT-CFM objective, as presented in Eq.~\eqref{eq:orgin-cfm}, can be reformulated as follows:
+
+$$
+\label{eq:ot-cfm-adjusted}
+\mathcal{L}_{CFM}(\theta) = \mathbb{E}_{t,\mathbf{x}_0,\mathbf{x}_1}
+\left\lVert
+\mathbf{v}_\theta(\mathbf{x}_t, t) - \frac{\mathbf{x}_1 - \mathbf{x}_t}{1 - t}
+\right\rVert^2.
+$$
+
+We assume that $\mathbf{x}_t$ can be estimated via $\mathbf{f}_{\psi}(\cdot)$.
+
+Under this assumption, $\mathbf{x}_t$ is treated as a learnable state, which we denote as $\mathbf{x}_{\text{pr}}$, while $t$ is regarded as an unknown interpolation parameter, represented as a prior-dependent time variable $\tau$. 
+Consequently, Eq.~([eq:ot-cfm-adjusted](#eq:ot-cfm-adjusted)) can be reformulated as follows:
+
+$$
+\label{eq:ot-cfm-adjusted-1}
+
+\begin{split}
+\mathcal{L}_{\text{CFM}}(\theta) = \mathbb{E}_{\mathbf{x}_{\text{pr}}, \mathbf{x}_1}
+\left\lVert
+\mathbf{v}_\theta(\mathbf{x}_{\text{pr}}, \tau) - \frac{\mathbf{x}_1 - \mathbf{x}_{\text{pr}}}{1 - \tau}
+\right\rVert^2.
+\end{split}
+
+$$
+
+This paradigm is similar to the original OT-CFM in its objective of regressing the velocity between the initial prior $\mathbf{x}_0$ and data $\mathbf{x}_1$ pairs. 
+However, unlike the original approach, it does not access the distribution of $\mathbf{x}_0$ during training.
+
+Therefore, it also does not enforce $\mathbf{x}_0$ to follow a normal distribution.
+
+Furthermore, as the prior distribution $\mathbf{x}_{\text{pr}}$ approaches the target distribution $\mathbf{x}_1$, both the number of sampling steps and the magnitude of each step are substantially reduced. 
+This convergence enables the sampling process to be efficiently performed in as few as a single step.\\[8pt]
+**Vector Field Estimator Modeling**. 
+
+To model $\mathbf{v}_{\theta}(\cdot,\cdot)$, we define the latent representations of the prior, target, and estimated target distributions as $\mathbf{x}_{\text{pr}}$, $\mathbf{x}_1$, and $\mathbf{\tilde{x}}_1$, respectively, where $\mathbf{x}_{\text{pr}}, \mathbf{x}_1, \mathbf{\tilde{x}}_1 \in \mathbb{R}^{6 \times N \times D}$. 
+These terms represent six quantizer categories with sequence length $N$ and feature dimensionality $D$. 
+Inspired by diffusion-based text generation models like Diffuseq [^Gong2023DiffuSeq], Difformer [^Gao2024Empowering], and FlowSeq [^Hu2024Flow], we condition $\mathbf{x}_{\text{pr}}$ on an acoustic prompt to guide $\mathbf{v}_{\theta}(\cdot,\cdot)$ in transferring speech attributes other than content.
+
+Specifically, only prosody and acoustic detail codes serve as prompts, while the content codes are masked to prevent undesired content transfer.
+
+The input to $\mathbf{v}_{\theta}(\cdot,\cdot)$ is then formulated as the concatenated representation:
+
+$$
+\label{eq:z-prior}
+\mathbf{z_{\text{pr}}} = **Concat**(\mathbf{y}_{\text{mask}}, \mathbf{x}_{\text{pr}} + \epsilon), \quad  \epsilon \sim \mathcal{N}(0,I),
+$$
+
+where $\mathbf{z}_\text{pr} \in \mathbb{R}^{6 \times L \times D}$, with $L = M + N$ representing the total sequence length of the concatenated input.
+$\mathbf{y}_\text{mask}$ denotes the content-masking representation of the acoustic prompt.
+
+Random Gaussian noise $\epsilon$ is added to the latent representation of $\mathbf{x}_{\text{pr}}$ to ensure the robustness and diversity of the model.
+
+The diagram of the Vector Field Estimator is shown in Fig.~[fig:overall-architecture](#fig:overall-architecture)c.\\[8pt]
+**Folding Mechanism and Quantizer Encoding**.
+
+Our data representation consists of six sequences of quantizer embeddings, making direct sequence modeling with Transformers challenging. 
+Previous works using Neural Codec for audio discretization, such as VALL-E [^Chen2025Neural], VALL-E 2 [^Chen2024Vall-E], and *NaturalSpeech3* [^Ju2024N}atural{S}peech], model each quantizer sequence independently. 
+While effective, this approach incurs high computational costs and long generation times due to sequential processing.
+
+To mitigate these inefficiencies, we propose modeling all six quantizers simultaneously by folding them along the hidden dimension. 
+Let $\mathcal{F}(\cdot)$ be the folding function, defined as a composition of two transformations: $\mathcal{G}: \mathbb{R}^{6 \times L \times D} \to \mathbb{R}^{L \times 6D}$ and $\mathcal{H}: \mathbb{R}^{L \times 6D} \to \mathbb{R}^{L \times D'}$.
+
+Thus, $\mathcal{F}$ is expressed as:
+$\mathcal{F} \triangleq \mathcal{H} \circ \mathcal{G}: \mathbb{R}^{6 \times L \times D} \to \mathbb{R}^{L \times D'}.
+$
+Within this framework, the function $\mathcal{F}(\cdot)$ permutes and reshapes the input tensor to sequentially align the component quantizers in the hidden space, following the prescribed order of prosody, content, and acoustic details. 
+Subsequently, it adjusts the tensor's dimensionality accordingly.
+
+In addition, we propose a quantizer encoding mechanism designed to identify specific quantizers within the hidden space. 
+This mechanism operates in conjunction with the $\mathcal{F}(\cdot)$ function. 
+The quantizer encoding is formally defined as follows:
+
+$$
+\label{eq:vq-encode}
+\mathcal{Q}(x) = x + **Dup**(\omega, L), \quad x \in \mathbb{R}^{6 \times L \times D}.
+$$
+
+Here, the quantizer encoding function $\mathcal{Q}(\cdot)$ integrates the input tensor $\mathbb{R}^{6 \times L \times D}$ with the embedding $**Dup**(\omega, L)$.
+
+In this context, $\omega \in \mathbb{R}^{6 \times 1 \times D}$ plays a role as the identifier for the latent representation of the quantizers, while the function $**Dup**(\cdot, \cdot)$ duplicates the identifier along the sequence length $L$.
+
+With $\mathcal{Q}(\cdot)$, we aim to prevent the model from confusing the quantizers with each other, even when they are simultaneously modeled within a single sequence.
+
+Consequently, the latent representation $\mathbf{z}_{\text{pr}}$ is transformed into $\breve{\mathbf{z}}_{\text{pr}}$, which subsequently serves as the direct input to the function $\mathbf{v}_{\theta}(\cdot, \cdot)$.
+
+The transformation is defined as $\breve{\mathbf{z}}_{\text{pr}} = (\mathcal{F} \circ \mathcal{Q})(\mathbf{z}_{\text{pr}})$.\\[8pt]
+
+**Anchor Loss**.
+
+To optimize generative model performance on discrete token data and stabilize training, we use Anchor Loss \(\mathcal{L}_{anchor}\) as a regularization term for embeddings.
+
+Initially introduced in diffusion models for discrete data [^Gao2024Empowering] and later adapted for flow matching models [^Hu2024Flow], \(\mathcal{L}_{anchor}\) measures the difference between an intermediate state \(\mathbf{x}_t\) and the ground truth \(\mathbf{x}_1\). 
+It prevents embedding collapse, reduces distances between states, and enables efficient sampling. 
+In this study, \(\mathcal{L}_{\text{anchor}}\) minimizes the negative log-likelihood of the joint probability (Eq.~\eqref{eq:anchor-prob}).
+
+Let $\mathbf{e}_{\phi}(\cdot)=[e_1,e_2,\dots,e_V] \in \mathbb{R}^{V \times D}$ denotes the embedding lookup function with the vocabulary size of $V$.
+
+Given $\mathcal{A}^{6 \times L}=\{\alpha_{i,j} \mid i=1 \dots 6; j=1 \dots L\}$, where $\alpha_{i,j} \in \{1 \dots V \}$,  represents a quantizer element of an $\mathbf{x}_1$ with the sequence length of $L$, the embedding of $\mathcal{A}^{6 \times L}$ can be expressed as $\mathbf{e}_{\phi}(\mathcal{A}^{6 \times L})=\{\varepsilon_{i,j} \mid i=1 \dots 6; j=1 \dots L\}$, where $\varepsilon_{i,j} \in \mathbb{R}^D$.
+
+Thus, the joint probability approximating the target distribution $\mathbf{z}_1$, conditioned on the estimated sequences $\tilde{\mathbf{z}}_{1}$, can be expressed as follows:
+
+$$
+\label{eq:anchor-prob}
+p(\mathbf{z}_1 \mid \tilde{\mathbf{z}}_1;\phi) = \prod_{i=1}^{6} \prod_{j=1}^{L} p(\varepsilon_{i,j} \mid \tilde{\varepsilon}_{i,j}; \mathbf{e}_{\phi}),
+$$
+
+where $\tilde{\mathbf{z}}_{1}$ is the approximation of $\mathbf{z}_{1}$, deduced using the triplet consisting of the estimated vector $\mathbf{v}_{\theta}(\breve{\mathbf{z}}_{\text{pr}}, \tau)$, the prior state $\mathbf{z}_{\text{pr}}$, and the corresponding interpolate parameter $\tau$.
+
+The function $\mathcal{F}^{-1}$ denotes the reverse function of $\mathcal{F}$.
+
+This relationship is expressed as $\tilde{\mathbf{z}}_1 = \mathbf{z}_{\text{pr}} + (1 - \tau)\mathcal{F}^{-1}(\mathbf{v}_{\theta}(\breve{\mathbf{z}}_{\text{pr}}, \tau))$.\\[8pt]
+
+**Total loss**.
+
+We define the total loss function used in our joint training method as $\mathcal{L}_{total} = \mathcal{L}_{prior} + \mathcal{L}_{dur} + \mathcal{L}_{CFM} + \mathcal{L}_{anchor}$.
+
+The loss functions \(\mathcal{L}_{prior}\) and \(\mathcal{L}_{dur}\) set the training objective for the Prior Codes Generator, whereas \(\mathcal{L}_{CFM}\) and \(\mathcal{L}_{anchor}\) are designed to construct the vector field and distill the sampling steps, respectively.
